--- a/src/routes/login/login.html
+++ b/src/routes/login/login.html
@@ -5,6 +5,7 @@
     <title>Login</title>
   </head>
   <body>
+    {error_html}
     <form action="/login" method="post">
       <label>Username
         <input
